[gd_scene load_steps=5 format=3 uid="uid://cntd5yssxjyv2"]

[ext_resource type="Script" path="res://addons/enhanced_input/scenes/controls_options.gd" id="1_pkoba"]
[ext_resource type="PackedScene" uid="uid://d1ds65i3kt0qb" path="res://addons/variable_resource_types/scenes/range_float_option.tscn" id="3_8aiwu"]
[ext_resource type="PackedScene" uid="uid://do1mh8varxv6q" path="res://addons/enhanced_input/scenes/axis_data_option.tscn" id="4_u6pvl"]
[ext_resource type="PackedScene" uid="uid://d3prvbxntv3bm" path="res://addons/enhanced_input/scenes/control_option.tscn" id="13_fkiwe"]

[node name="ControlsOptions" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_pkoba")
single_option_scene = ExtResource("13_fkiwe")
axis_data_scene = ExtResource("4_u6pvl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Controls settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
current_tab = 3

[node name="Keyboard" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
follow_focus = true
metadata/_tab_index = 0

[node name="KeyboardControlsParent" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Keyboard"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
size_flags_horizontal = 3

[node name="Mouse" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
follow_focus = true
metadata/_tab_index = 1

[node name="MouseControlsParent" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Mouse"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
size_flags_horizontal = 3

[node name="Controller" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
follow_focus = true
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Controller"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Controller/VBoxContainer"]
layout_mode = 2

[node name="VibrationStrengthRangeFloatOption" parent="MarginContainer/VBoxContainer/TabContainer/Controller/VBoxContainer/HBoxContainer" instance=ExtResource("3_8aiwu")]
unique_name_in_owner = true
layout_mode = 2
label_text = "Vibration strength"

[node name="VibrationTestCheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/TabContainer/Controller/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Test"

[node name="VibrationTestTimer" type="Timer" parent="MarginContainer/VBoxContainer/TabContainer/Controller/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
wait_time = 0.5

[node name="JoyControlsParent" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Controller/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
size_flags_horizontal = 3

[node name="Axes" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
follow_focus = true
metadata/_tab_index = 3

[node name="AxisDataParent" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Axes"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
size_flags_horizontal = 3

[node name="ResetInputSchemeButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset"

[connection signal="toggled" from="MarginContainer/VBoxContainer/TabContainer/Controller/VBoxContainer/HBoxContainer/VibrationTestCheckButton" to="." method="_on_vibration_test_check_button_toggled"]
[connection signal="timeout" from="MarginContainer/VBoxContainer/TabContainer/Controller/VBoxContainer/HBoxContainer/VibrationTestTimer" to="." method="_on_vibration_test_timer_timeout"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ResetInputSchemeButton" to="." method="_on_reset_input_scheme_button_pressed"]
